--- a/README
+++ b/README
@@ -3,3 +3,13 @@ This is the TitanPad.com Source-Code.
 See README.EtherPad for the Original EtherPad open-source release README, incl.
 most licensing info.
 
+
+File Import/Export Notes
+------------------------
+
+  * Get cos.jar from servlets.com/cos/, needs to go into infrastructure/libs
+  * Install openoffice.org openoffice.org-dev msttcorefonts
+  * Set etherpad.soffice=true
+  * Use etherpad/bin/start-soffice
+
+
